# Wasm

cosmwasm/exercise/ch00/contract/: Cargo.toml
cosmwasm/exercise/ch00/contract/src/: lib.rs
cosmwasm/exercise/ch01-ERC20/: Cargo.toml
cosmwasm/exercise/ch01-ERC20/src/: contract.rs
